--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.5.3",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
